--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "mushroomfruit",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Mushroom information site",
+  "version": "1.0.0",
+  "author": "Rishaan van Beveren",
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
@@ -11,7 +11,6 @@
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
-    "@react-icons/all-files": "^4.1.0",
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.1",
@@ -30,7 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "react-spring": "^9.3.2",
     "styled-components": "^5.3.3"
   },
